--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </ul>
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
+                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Gaming </a>
                                     </li>
                                     <li>
                                         <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
@@ -139,36 +139,6 @@
             </div>
         </nav>
         <!-- /Navbar -->
-        <!-- Registration Form -->
-        <div id="nav-registration" class="modal fade">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Register</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form action="#" method="post">
-                            <div>
-                                <p>Username:</p>
-                                <div class="youplay-input">
-                                    <input type="text" name="user_login" />
-                                </div>
-                                <p>E-mail:</p>
-                                <div class="youplay-input">
-                                    <input type="text" name="user_email" />
-                                </div>
-                                <p>
-                                    <em>A password will be e-mailed to you.</em>
-                                </p>
-                                <button class="btn ml-3" name="submit">Register</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /Registration Form -->
         <div class="content-wrap">
             <!--
     Banner
