--- a/index.html
+++ b/index.html
@@ -177,14 +177,16 @@
                         <i class="fab fa-twitch"></i>
                         </a>
                         <h3>Twitch</h3>
-                        <div> Daily streams on Twitch for casual chat and information! </div>
+                        <div> Streams on Twitch for casual chat and information! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="feature angled-bg">
-                        <i class="fa fa-users"></i>
-                        <h3>Community</h3>
-                        <div> We game together and play with viewers in a casual community! </div>
+                        <a href="https://youtube.com/classiccalebtv">
+                        <i class="fab fa-youtube"></i>
+                        </a>
+                        <h3>Gaming</h3>
+                        <div> Edited gaming related video content! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
