--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <i class="fab fa-youtube"></i>
                         </a>
                         <h3>Gaming</h3>
-                        <div> Edited gaming related video content! </div>
+                        <div> Edited gaming related video content to share the experiences! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
