--- a/discord/index.html
+++ b/discord/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>ClassicCaleb Guilded</title>
-      <meta http-equiv = "refresh" content = "0; url = https://guilded.gg/ClassicCalebTV" />
+      <title>ClassicCaleb Discord</title>
+      <meta http-equiv = "refresh" content = "0; url = https://discord.gg/GMTGJwX" />
    </head>
    <body>
-      <p>ClassicCaleb is now on Guilded! Redirect!</p>
+      <p>ClassicCalebTV Discord Redirect!</p>
       <a rel="me" href="https://mastodon.online/@classiccaleb">Mastodon Proof</a>
    </body>
 </html>
