--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
                             <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="https://guilded.gg/ClassicCalebTV">
-                                        <i class="fab fa-guilded"></i>
-                                        <span>Join on Guilded</span>
+                                    <a href="https://discord.gg/GMTGJwX">
+                                        <i class="fab fa-discord"></i>
+                                        <span>Join on Discord</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
