--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
+                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
                                     </li>
                                     <li>
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
@@ -121,6 +121,9 @@
                                     </li>
                                     <li>
                                         <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
                                     </li>
                                 </ul>
                             </div>
