--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Weekdays</h3>
-                                        <h3>08:15 CST</h3>
-                                        <div> Thursday-Friday </div>
+                                        <h3>Weekends</h3>
+                                        <h3>Mornings CST</h3>
+                                        <div> Saturdays </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Weekends</h3>
-                                        <h3>08:00 CST</h3>
-                                        <div> Saturday-Sunday </div>
+                                        <h3>Mornings CST</h3>
+                                        <div> Sunday </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
