--- a/index.html
+++ b/index.html
@@ -211,17 +211,15 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Weekends</h3>
+                                        <h3>Saturdays</h3>
                                         <h3>Mornings CST</h3>
-                                        <div> Saturdays </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Weekends</h3>
+                                        <h3>Sundays</h3>
                                         <h3>Mornings CST</h3>
-                                        <div> Sunday </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
