--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                 <div class="social-icon">
                                     <a href="https://www.youtube.com/StreamTechTV">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Videos on Youtube</span>
+                                        <span>StreamTech Youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
