--- a/index.html
+++ b/index.html
@@ -295,6 +295,12 @@
                                     </a>
                                 </div>
                                 <div class="social-icon">
+                                    <a href="https://www.youtube.com/ClassicCalebTV">
+                                        <i class="fab fa-youtube"></i>
+                                        <span>Youtube Gaming</span>
+                                    </a>
+                                </div>
+                                <div class="social-icon">
                                     <a href="https://twitter.com/ClassicCalebTV">
                                         <i class="fab fa-twitter-square"></i>
                                         <span>Follow on Twitter</span>
