--- a/index.html
+++ b/index.html
@@ -283,6 +283,12 @@
                                     </a>
                                 </div>
                                 <div class="social-icon">
+                                    <a href="https://guilded.gg/ClassicCalebTV">
+                                        <i class="fab fa-guilded"></i>
+                                        <span>Join on Guilded</span>
+                                    </a>
+                                </div>
+                                <div class="social-icon">
                                     <a href="https://www.twitch.tv/ClassicCaleb">
                                         <i class="fab fa-twitch"></i>
                                         <span>Streams on Twitch</span>
