--- a/outriders-builds.html
+++ b/outriders-builds.html
@@ -235,9 +235,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
                             <a href="#" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-kingdoms-of-amalur-reckoning-500x375.jpg" alt="">
-                                </div>
+                              <iframe width="600" height="340" src="https://www.youtube.com/embed?max-results=1&controls=0&showinfo=0&rel=0&listType=user_uploads&list=ClassicCalebTV" frameborder="0" allowfullscreen></iframe>
                                 <div class="bottom-info align-center">
                                     <h3>Placeholder Build</h3>
                                     <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
