--- a/outriders-builds.html
+++ b/outriders-builds.html
@@ -220,13 +220,26 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
                             <a href="placeholder.html" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-dark-souls-ii-500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Placeholder Build</h3>
-                                    <span class="date"><i class="fa fa-twitch"></i> Awesome User</span>
-                                </div>
+                              <iframe class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+var reqURL = "https://api.rss2json.com/v1/api.json?rss_url=" + encodeURIComponent("https://www.youtube.com/feeds/videos.xml?channel_id=");
+function loadVideo(iframe) {
+  $.getJSON(reqURL + iframe.getAttribute('cid'),
+    function(data) {
+      var videoNumber = (iframe.getAttribute('vnum') ? Number(iframe.getAttribute('vnum')) : 0);
+      console.log(videoNumber);
+      var link = data.items[videoNumber].link;
+      id = link.substr(link.indexOf("=") + 1);
+      iframe.setAttribute("src", "https://youtube.com/embed/" + id + "?controls=0&autoplay=1");
+    }
+  );
+}
+var iframes = document.getElementsByClassName('latestVideoEmbed');
+for (var i = 0, len = iframes.length; i < len; i++) {
+  loadVideo(iframes[i]);
+}
+</script>
                             </a>
                         </div>
                     </div>
