--- a/index2.html
+++ b/index2.html
@@ -256,10 +256,28 @@
                 </div>
                 <div class="info container align-center">
                     <div>
-                        <h2>Thanks for your support!</h2>
-                        <em class="lead">Never expected, always appreciated! Alerts on stream if live. Tips are non-refundable.</a></em>
-                        <br><br><br><br>
-                        <a class="btn btn-info" href="https://streamelements.com/classiccaleb/tip">Regular Tips</a><a class="btn btn-info" href="https://1upcoin.com/donate/classiccaleb">Crypto Tips</a>
+                        <h2>Latest Youtube Content</h2>
+                        <br>
+                        <iframe class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+var reqURL = "https://api.rss2json.com/v1/api.json?rss_url=" + encodeURIComponent("https://www.youtube.com/feeds/videos.xml?channel_id=");
+function loadVideo(iframe) {
+  $.getJSON(reqURL + iframe.getAttribute('cid'),
+    function(data) {
+      var videoNumber = (iframe.getAttribute('vnum') ? Number(iframe.getAttribute('vnum')) : 0);
+      console.log(videoNumber);
+      var link = data.items[videoNumber].link;
+      id = link.substr(link.indexOf("=") + 1);
+      iframe.setAttribute("src", "https://youtube.com/embed/" + id + "?controls=0&autoplay=1");
+    }
+  );
+}
+var iframes = document.getElementsByClassName('latestVideoEmbed');
+for (var i = 0, len = iframes.length; i < len; i++) {
+  loadVideo(iframes[i]);
+}
+</script>
                     </div>
                 </div>
             </section>
