--- a/index2.html
+++ b/index2.html
@@ -250,11 +250,10 @@
             </section>
             <!-- /The True Emotions -->
             <!-- Preorder -->
-            <section class="youplay-banner youplay-banner-parallax big mt-120">
-                <div class="image" data-speed="0.4">
-                    <img class="jarallax-img" src="assets/images/dark/game-bloodborne-1920x1151.jpg" alt="">
+            <section class="container youplay-news news-grid">
+                <div class="row vertical-gutter multi-columns-row">
                 </div>
-                <div class="info container align-center">
+                <div class="col-lg-3 col-md-4 col-sm-6">
                     <div>
                         <h2>Latest Youtube Content</h2>
                         <br>
