--- a/index2.html
+++ b/index2.html
@@ -250,12 +250,13 @@
             </section>
             <!-- /The True Emotions -->
             <!-- Preorder -->
-            <section class="container youplay-news news-grid">
-                <div class="row vertical-gutter multi-columns-row">
+            <section class="youplay-banner youplay-banner-parallax big mt-120">
+                <div class="image" data-speed="0.4">
+                    <img class="jarallax-img" src="assets/images/dark/game-bloodborne-1920x1151.jpg" alt="">
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="info container align-center">
                     <div>
-                        <h2>Latest Youtube Content</h2>
+                        <h3>Latest Youtube Content</h3>
                         <br>
                         <iframe class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" width="426" height="240" frameborder="0" allowfullscreen></iframe>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
