--- a/index2.html
+++ b/index2.html
@@ -254,9 +254,9 @@
                 <div class="image" data-speed="0.4">
                     <img class="jarallax-img" src="assets/images/dark/game-bloodborne-1920x1151.jpg" alt="">
                 </div>
-                <div class="info container align-center">
+                <div class="info container">
                     <div>
-                        <h3>Latest Youtube Content</h3>
+                        <h2>Latest Youtube Content</h2>
                         <br>
                         <iframe class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" width="426" height="240" frameborder="0" allowfullscreen></iframe>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
