--- a/index2.html
+++ b/index2.html
@@ -258,7 +258,7 @@
                     <div>
                         <h2 class="fs-40 mt-45">Latest Youtube Content</h2>
                         <br>
-                        <iframe class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" style=”border: 3px solid black;” width="426" height="240" frameborder="0" allowfullscreen></iframe>
+                        <iframe style=”border: 3px solid black;” class="latestVideoEmbed" vnum='0' cid="UCAmwh0HLg-1K3isUA02RYqw" width="426" height="240" frameborder="0" allowfullscreen></iframe>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script>
 var reqURL = "https://api.rss2json.com/v1/api.json?rss_url=" + encodeURIComponent("https://www.youtube.com/feeds/videos.xml?channel_id=");
