--- a/index2.html
+++ b/index2.html
@@ -249,6 +249,17 @@
                 </div>
             </section>
             <!-- /The True Emotions -->
+                        <!-- Preorder -->
+            <section class="youplay-banner youplay-banner-parallax big mt-120">
+                <div class="image" data-speed="0.4">
+                    <img class="jarallax-img" src="assets/images/dark/game-bloodborne-1920x1151.jpg" alt="">
+                </div>
+                <div class="info container align-center">
+                    <div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Preorder -->
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
                 <div class="image" data-speed="0.4" data-img-position="50% 0%">
