--- a/index2.html
+++ b/index2.html
@@ -244,8 +244,9 @@
                         </div>
                         <div class="col-sm-6">
                 <iframe src="https://discord.com/widget?id=517090361865273386&theme=dark" width="268" height="380" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe> <iframe src="https://www.guilded.gg/canvas_index.html?route=%2Fcanvas%2Fembed%2Fteamcard%2FJjJzaa0j" width="268" height="380" frameborder="0" scrolling="no"></iframe>
+                            <br><br>
                         </div>
-                   </div><br><br><br>
+                   </div>
                 </div>
             </section>
             <!-- /The True Emotions -->
