--- a/index.html
+++ b/index.html
@@ -263,12 +263,6 @@
                             <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="https://discord.gg/GMTGJwX">
-                                        <i class="fab fa-discord"></i>
-                                        <span>Join on Discord</span>
-                                    </a>
-                                </div>
-                                <div class="social-icon">
                                     <a href="https://guilded.gg/ClassicCalebTV">
                                         <i class="fab fa-guilded"></i>
                                         <span>Join on Guilded</span>
@@ -290,6 +284,12 @@
                                     <a href="https://www.youtube.com/ClassicCalebTV">
                                         <i class="fab fa-youtube"></i>
                                         <span>Youtube Gaming</span>
+                                    </a>
+                                </div>
+                                 <div class="social-icon">
+                                    <a href="https://www.tiktok.com/@classiccalebtv">
+                                        <i class="fab fa-tiktok"></i>
+                                        <span>Follow on Twitter</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
