--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                  <div class="social-icon">
                                     <a href="https://www.tiktok.com/@classiccalebtv">
                                         <i class="fab fa-tiktok"></i>
-                                        <span>Follow on Twitter</span>
+                                        <span>Follow on TikTok</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
