--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                             <div class="dropdown-menu">
                                 <ul role="menu">
                                     <li>
-                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
-                                    </li>
-                                    <li>
                                         <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
                                     </li>
                                     <li>
                                         <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.tiktok.com/@classiccalebtv"> TikTok </a>
                                     </li>
                                 </ul>
                                 <ul role="menu">
