--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <!-- Social Buttons -->
                     <div class="social">
                         <div class="container">
-                            <h3>Connect socially with <strong>ClassicCaleb</strong></h3>
+                            <h3 id="socials">Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
                                     <a href="https://guilded.gg/ClassicCalebTV">
