--- a/index.html
+++ b/index.html
@@ -94,33 +94,9 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Platforms <span class="caret"></span>
+                            <a href="#socials"> Platforms <span class="label"></span>
                                 <span class="label">find me</span>
                             </a>
-                            <div class="dropdown-menu">
-                                <ul role="menu">
-                                    <li>
-                                        <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.tiktok.com/@classiccalebtv"> TikTok </a>
-                                    </li>
-                                </ul>
-                                <ul role="menu">
-                                    <li>
-                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Gaming </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://guilded.gg/ClassicCalebTV"> Guilded </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="https://kit.co/ClassicCaleb"> Specs <span class="label"></span>
