--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
                     <div class="col-xs-12">
                         <div class="col-sm-6">
                         <h2 class="fs-40 mt-0">Have Any Questions?</h2>
-                        <p class="lead">Hop in our Guilded Server for a friendly community to game with or for technical support for streaming! Streamers automatically show at the top of our member list while they are live.</p>
+                        <p class="lead">Hop in our Discord for a friendly community to game with or for technical support for streaming! Streamers automatically show at the top of our member list while they are live.</p>
                         </div>
                         <div class="col-sm-6">
-                <iframe src="https://www.guilded.gg/canvas_index.html?route=%2Fcanvas%2Fembed%2Fteamcard%2FJjJzaa0j" width="268" height="380" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://discord.com/widget?id=517090361865273386&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                             <br><br><br><br>
                         </div>
                    </div>
@@ -239,9 +239,9 @@
                             <h3 id="socials">Connect socially with <strong>ClassicCaleb</strong></h3>
                             <div class="social-icons">
                                 <div class="social-icon">
-                                    <a href="https://guilded.gg/ClassicCalebTV">
-                                        <i class="fab fa-guilded"></i>
-                                        <span>Join on Guilded</span>
+                                    <a href="https://discord.gg/GMTGJwX">
+                                        <i class="fab fa-discord"></i>
+                                        <span>Join on Discord</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
