--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <div class="feature angled-bg">
                                         <i class="fab fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
-                                        <a class="btn btn-info" href="https://www.guilded.gg/ClassicCalebTV/groups/QzR054LD/channels/dba9ea87-db47-4084-979b-5e4e22fdeaeb/calendar">&nbsp; Posted Here</a>
+                                        <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a>
                                     </div>
                                 </div>
                             </div>
