--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Saturdays</h3>
-                                        <h3>Mornings CST</h3>
+                                        <h3>Weekdays</h3>
+                                        <h3>5:45am CST</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Sundays</h3>
-                                        <h3>Mornings CST</h3>
+                                        <h3>Weekends</h3>
+                                        <h3>8:00am CST</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -260,12 +260,6 @@
                                     <a href="https://www.youtube.com/ClassicCalebTV">
                                         <i class="fab fa-youtube"></i>
                                         <span>Youtube Gaming</span>
-                                    </a>
-                                </div>
-                                 <div class="social-icon">
-                                    <a href="https://www.tiktok.com/@classiccalebtv">
-                                        <i class="fab fa-tiktok"></i>
-                                        <span>Follow on TikTok</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
