--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                 <div class="social-icon">
                                     <a href="https://www.youtube.com/ClassicCalebTV">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Youtube Gaming</span>
+                                        <span>Videos on Youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
