--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class=" dropdown dropdown-hover">
-                            <a href="https://www.guilded.gg/ClassicCalebTV/blog/Community-News"> Blog <span class="label"></span>
+                            <a href="https://www.youtube.com/c/ClassicCalebTV/community"> Blog <span class="label"></span>
                                 <span class="label">news</span>
                             </a>
                         <li class=" dropdown dropdown-hover">
