--- a/merch/index.html
+++ b/merch/index.html
@@ -12,6 +12,6 @@
       <meta http-equiv = "refresh" content = "0; url = https://store.streamelements.com/thecrankycaleb" />
    </head>
    <body>
-      <p>ClassicCaleb Blog Redirect!</p>
+      <p>ClassicCaleb Merch Redirect!</p>
    </body>
 </html>
