--- a/indexBAK.html
+++ b/indexBAK.html
@@ -159,7 +159,7 @@
                         <i class="fab fa-youtube"></i>
                         </a>
                         <h3>Gaming</h3>
-                        <div> Edited gaming related video content to share the experiences! </div>
+                        <div> Streams and edited gaming content to share the experiences! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
