--- a/indexBAK.html
+++ b/indexBAK.html
@@ -7,7 +7,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@ClassicCalebTV">
         <meta name="twitter:title" content="Tutorials | Tech | Gaming">
-        <meta name="twitter:description" content="I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together!">
+        <meta name="twitter:description" content="I started making content to geek out with streaming technology and gaming. I continue because of the amazing people that come together!">
         <meta name="twitter:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/twitcardLRG.png">
         <meta name="twitter:creator" content="@classiccalebtv">
         <meta name="description" content="Tutorials | Tech | Gaming">
@@ -132,7 +132,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h1 class="h1">Tutorials | Tech | Gaming</h1>
-                                    <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together, share knowledge with one another, and make each other better at both gaming and tech. </p>
+                                    <p class="lead"> I started making content to geek out with streaming technology and gaming. I continue because of the amazing people that come together, share knowledge with one another, and make each other better at both gaming and tech. </p>
                                     <br>
                                     <a class="btn btn-info" href="#schedule"><i class="fa fa-calendar"></i>&nbsp; Schedule</a>
                                 </div>
