--- a/indexBAK.html
+++ b/indexBAK.html
@@ -128,7 +128,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h1 class="h1">Tutorials | Tech | Gaming</h1>
-                                    <p class="lead"> I started making content to geek out with streaming technology and gaming. I continue because of the amazing people that come together, share knowledge with one another, and make each other better at both gaming and tech. </p>
+                                    <p class="lead"> I started making content to geek out with streaming technology and gaming. I continue because of the amazing people that come together, exchange knowledge, and make each other better at both gaming and tech. </p>
                                     <br>
                                     <a class="btn btn-info" href="#schedule"><i class="fa fa-calendar"></i>&nbsp; Schedule</a>
                                 </div>
