--- a/indexBAK.html
+++ b/indexBAK.html
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fab fa-twitch"></i><i class="fab fa-youtube"></i>
+                                        <i class="fab fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
                                         <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a>
                                     </div>
