--- a/indexBAK.html
+++ b/indexBAK.html
@@ -180,21 +180,27 @@
                             <h2 class="fs-40 mt-45" id="schedule">Stream Schedule</h2>
                             <br>
                             <div class="youplay-features">
-                                <div class="col-sm-4">
+                                <div class="col-sm-3">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Weekdays</h3>
                                         <h3>5:45am CST</h3>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-3">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Weekends</h3>
                                         <h3>8:00am CST</h3>
                                     </div>
+                                    <div class="col-sm-3">
+                                    <div class="feature angled-bg">
+                                        <i class="fa fa-clock"></i>
+                                        <h3>Weekdays</h3>
+                                        <h3>5:45am CST</h3>
+                                    </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-3">
                                     <div class="feature angled-bg">
                                         <i class="fab fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
