--- a/indexBAK.html
+++ b/indexBAK.html
@@ -204,7 +204,7 @@
                                     <div class="feature angled-bg">
                                         <i class="fab fa-twitch"></i>
                                         <h3>Upcoming Game</h3>
-                                        <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a>
+                                      <!--  <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a> -->
                                     </div>
                                 </div>
                             </div>
