--- a/indexBAK.html
+++ b/indexBAK.html
@@ -193,6 +193,7 @@
                                         <h3>Weekends</h3>
                                         <h3>8:00am CST</h3>
                                     </div>
+                                </div>    
                                     <div class="col-sm-3">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
