--- a/indexBAK.html
+++ b/indexBAK.html
@@ -182,25 +182,18 @@
                             <div class="youplay-features">
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
-                                        <h3>Weekdays</h3>
-                                        <h3>5:45am CST</h3>
+                                        <i class="fa fa-twitch"></i>
+                                        <h3>Sun/Wed</h3>
+                                        <h3>Early Mornings CST</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
+                                        <i class="fa fa-youtube"></i>
                                         <h3>Weekends</h3>
                                         <h3>8:00am CST</h3>
                                     </div>
                                 </div>    
-                                  <div class="col-sm-6">
-                                    <div class="feature angled-bg">
-                                        <i class="fab fa-twitch"></i>
-                                        <h3>Upcoming Game</h3>
-                                      <!--  <a class="btn btn-info" href="https://www.twitch.tv/classiccaleb/schedule">&nbsp; Posted Here</a> -->
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
