--- a/indexBAK.html
+++ b/indexBAK.html
@@ -182,16 +182,16 @@
                             <div class="youplay-features">
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-twitch"></i>
+                                        <i class="fab fa-twitch"></i>
                                         <h3>Sun/Wed</h3>
                                         <h3>Early Mornings CST</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-youtube"></i>
-                                        <h3>Weekends</h3>
-                                        <h3>8:00am CST</h3>
+                                        <i class="fab fa-youtube"></i>
+                                        <h3>Mon/Tue/Thu/Fri/Sat</h3>
+                                        <h3>Early Mornings CST</h3>
                                     </div>
                                 </div>    
                             </div>
