--- a/indexBAK.html
+++ b/indexBAK.html
@@ -236,13 +236,13 @@
                                 <div class="social-icon">
                                     <a href="https://www.twitch.tv/ClassicCaleb">
                                         <i class="fab fa-twitch"></i>
-                                        <span>Streams on Twitch</span>
+                                        <span>Live on Twitch</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
                                     <a href="https://www.youtube.com/ClassicCalebTV">
                                         <i class="fab fa-youtube"></i>
-                                        <span>Videos on Youtube</span>
+                                        <span>Content on Youtube</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
