--- a/indexBAK.html
+++ b/indexBAK.html
@@ -181,6 +181,7 @@
                             <br>
                             <div class="youplay-features">
                                 <div class="col-sm-6">
+                                    <a href="https://twitch.tv/classiccaleb">
                                     <div class="feature angled-bg">
                                         <i class="fab fa-twitch"></i>
                                         <h3>Sun/Wed</h3>
@@ -188,6 +189,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
+                                    <a href="https://youtube.com/classiccalebtv">
                                     <div class="feature angled-bg">
                                         <i class="fab fa-youtube"></i>
                                         <h3>Mon/Tue/Thu/Fri/Sat</h3>
