--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                                         <a href="https://twitch.tv/classiccaleb">
                                         <i class="fab fa-twitch"></i>
                                         </a>
-                                        <h3>Sun/Wed</h3>
-                                        <h3>Early Mornings CST</h3>
+                                        <h3>Daily (for general gaming)</h3>
+                                        <h3>Early Mornings CST (UTC-6)</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
@@ -194,8 +194,8 @@
                                         <a href="https://youtube.com/classiccalebtv">
                                         <i class="fab fa-youtube"></i>
                                         </a>
-                                        <h3>Mon/Tue/Thu/Fri/Sat</h3>
-                                        <h3>Early Mornings CST</h3>
+                                        <h3>Daily (when doing series playthroughs)</h3>
+                                        <h3>Early Mornings CST (UTC-6)</h3>
                                     </div>
                                 </div>    
                             </div>
