--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                         <a href="https://youtube.com/classiccalebtv">
                                         <i class="fab fa-youtube"></i>
                                         </a>
-                                        <h3>Daily (when doing series playthroughs)</h3>
+                                        <h3>Daily (if doing series playthrough)</h3>
                                         <h3>Early Mornings CST (UTC-6)</h3>
                                     </div>
                                 </div>    
