--- a/indexbak.html
+++ b/indexbak.html
@@ -185,7 +185,7 @@
                                         <a href="https://twitch.tv/classiccaleb">
                                         <i class="fab fa-twitch"></i>
                                         </a>
-                                        <h3>Daily (for general gaming)</h3>
+                                        <h3>Daily</h3>
                                         <h3>Early Mornings CST (UTC-6)</h3>
                                     </div>
                                 </div>
@@ -194,7 +194,7 @@
                                         <a href="https://youtube.com/classiccalebtv">
                                         <i class="fab fa-youtube"></i>
                                         </a>
-                                        <h3>Daily (if doing series playthrough)</h3>
+                                        <h3>Weekends</h3>
                                         <h3>Early Mornings CST (UTC-6)</h3>
                                     </div>
                                 </div>    
