--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <i class="fab fa-twitch"></i>
                         </a>
                         <h3>Twitch</h3>
-                        <div> Streams on Twitch for casual chat and information! </div>
+                        <div> What a dumpster fire. Will be streaming on Youtube instead! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -182,8 +182,8 @@
                             <div class="youplay-features">
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <a href="https://twitch.tv/classiccaleb">
-                                        <i class="fab fa-twitch"></i>
+                                        <a href="https://youtube.com/classiccalebtv">
+                                        <i class="fab fa-youtube"></i>
                                         </a>
                                         <h3>Daily</h3>
                                         <h3>Early Mornings CST (UTC-6)</h3>
@@ -262,7 +262,7 @@
                     <!-- Copyright -->
                     <div class="copyright">
                         <div class="container">
-                            <p>2022 &copy; <strong>ClassicCaleb</strong>. All rights reserved</p>
+                            <p>2023 &copy; <strong>ClassicCaleb</strong>. All rights reserved</p>
                         </div>
                     </div>
                     <!-- /Copyright -->
