--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <i class="fab fa-twitch"></i>
                         </a>
                         <h3>Twitch</h3>
-                        <div> What a dumpster fire. Will be streaming on Youtube instead! </div>
+                        <div> What a dumpster fire. I'll be streaming on Youtube instead! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
