--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <div class="youplay-features">
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <a href="https://youtube.com/classiccalebtv">
+                                        <a href="https://youtube.com/classiccalebtv/live">
                                         <i class="fab fa-youtube"></i>
                                         </a>
                                         <h3>Daily</h3>
@@ -191,7 +191,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="feature angled-bg">
-                                        <a href="https://youtube.com/classiccalebtv">
+                                        <a href="https://youtube.com/classiccalebtv/live">
                                         <i class="fab fa-youtube"></i>
                                         </a>
                                         <h3>Weekends</h3>
@@ -240,7 +240,7 @@
                                 <div class="social-icon">
                                     <a href="https://www.twitch.tv/ClassicCaleb">
                                         <i class="fab fa-twitch"></i>
-                                        <span>Live on Twitch</span>
+                                        <span>RIP Twitch</span>
                                     </a>
                                 </div>
                                 <div class="social-icon">
