--- a/index.html
+++ b/index.html
@@ -238,6 +238,6 @@
 		</div>
 		<script src="assets/main.js"></script>
 		<!-- qweoqwupeoiqwuewqe --><a rel="me" href="https://mastodon.online/@classiccaleb">.</a><!-- mnbnbxmbzxmncbzxc -->
-		<a href="http://mxguarddog.com/">prevent spam</a>
+		<a href="http://mxguarddog.com/faq.is_it_really_free/">free spam filter</a>
 	</body>
 </html>
