--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 											<span class="label">Mastodon</span>
 										</a>
 									</li><li>
-										<a class="n02" href="https://bsky.app/profile/classiccaleb.bsky.social">
+										<a class="n02" href="https://bsky.app/profile/classiccaleb.pro">
 											<svg aria-labelledby="icon-title"><title id="icon-title">Bluesky</title><use xlink:href="assets/icons.svg#bluesky"></use></svg>
 											<span class="label">Bluesky</span>
 										</a>
